--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ html {
 .nav__list-item--burger {
   position: relative;
   cursor: pointer;
-  width: 55px;
+  width: 50px;
   height: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -206,6 +206,7 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  background-color: palevioletred;
 }
 
 .nav_list-burger,
@@ -229,7 +230,7 @@ html {
 }
 
 .nav_list-burger::after {
-  bottom: 8px;
+  bottom: 7px;
 }
 
 .nav__mobail-wrapper {
@@ -286,7 +287,7 @@ html {
   padding-left: 20px;
 }
 .body--opened-menu .nav__list-item--burger {
-  width: 35px;
+  width: 30px;
 }
 .body--opened-menu .nav_list-burger,
 .body--opened-menu .nav_list-burger::before,
